syntax = "proto3";
package assets.transactions.burn;

import "gogoproto/gogo.proto";

message TransactionRequest {
  option (gogoproto.goproto_getters) = false;

  string from = 1;
  string from_id = 2;
  string asset_id = 3;
}